--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    h1{   /*it is a element selector*/
+        border: solid red;
+        padding: 5px;
+        margin-bottom: 5px;
+        border-radius: 30px;
+    }
+</style>
 </head>
 <body>
     <h1>Hemaaa</h1>
@@ -19,6 +27,7 @@
         <li>Latha</li>
         <li>Mummaaa</li>
     </ul>
+    <
     
     
 </body>
