Add h6 header to index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <h3>Hai this is hemaa how are you???</h3>
     <h4>This is a new lineeee</h4>
     <h5>Yeah you added line now im adding line h5 throgh github app</h5>
+    <h6>haaaiiiiiiii</h6>
     
     
 </body>
